--- a/ansible/playbooks/roles/message-router/tasks/main.yml
+++ b/ansible/playbooks/roles/message-router/tasks/main.yml
@@ -1,33 +1,43 @@
 ---
-- name: Execute AS3 declaration
-  import_tasks: as3.yml
-
-
-
 #
 # following instructions found at 
 # https://techdocs.f5.com/kb/en-us/products/big-ip_ltm/manuals/product/bigip-service-provider-message-routing-administration-13-0-0/2.html
 #
 
-- name: Create message routing peer with additional settings
-  bigip_message_routing_peer:
-    name: mr-peer-smscs
-    description: 'SMSC Static Peers'
-    pool: /Common/pool-smsc-static-peers
-    partition: Common
-    transport_config: mr-transport-smpp
+- name: Download iRule source
+  get_url:
+    url: 'https://raw.githubusercontent.com/rduchez/SMPP/master/smpp_irule_basic'
+    dest: "~/smpp_irule.tcl"
+    mode: '0440'
+
+- name: Add the iRule contained in template irule.tcl to the LTM module
+  bigip_irule:
+    content: "{{ lookup('template', '~/smpp_irule.tcl') }}"
+    module: ltm
+    name: smpp_generic
+    state: present
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
- 
+
+- name: Create pool
+  bigip_pool:
+    provider: "{{ bigip_provider }}"
+    state: present
+    name: smpp-pool
+    partition: Common
+    lb_method: least-connections-member
+    slow_ramp_time: 120
+  delegate_to: localhost
+
 - name: Create a generic parser
   bigip_message_routing_protocol:
     name: mr-protocol-smpp-control
     description: 'SMPP Internal Messaging'
-    no_response: yes
+    no_response: yes # creates route table entry without return route
     disable_parser: yes
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
- 
+
 - name: Create a generic parser
   bigip_message_routing_protocol:
     name: mr-protocol-smpp
@@ -36,7 +46,29 @@
     disable_parser: yes
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
- 
+
+- name: Create generic transport config
+  bigip_message_routing_transport_config:
+    name: mr-transport-smpp
+    partition: Common
+    profiles: "mr-protocol-smpp,f5-tcp-lan"
+    rules:
+      - smpp_generic
+    description: 'Short Message Peer-to-Peer Static Peer Transport'
+    provider: "{{ bigip_provider }}"
+  delegate_to: localhost
+
+- name: Create message routing peer with additional settings
+  bigip_message_routing_peer:
+    name: mr-peer-smscs
+    pool: smpp-pool
+    partition: Common
+    transport_config: mr-transport-smpp
+    ratio: 10
+    auto_init: yes
+    provider: "{{ bigip_provider }}"
+  delegate_to: localhost
+
 - name: Create a simple generic route
   bigip_message_routing_route:
     name: mr-route-smpp-default
@@ -45,7 +77,8 @@
       - mr-peer-smscs
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
- 
+
+
 - name: Create a generic router profile
   bigip_message_routing_router:
     name: mr-router-smpp
@@ -55,12 +88,19 @@
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
 
-- name: Create generic transport config
-  bigip_message_routing_transport_config:
-    name: mr-transport-smpp
-    description: 'Short Message Peer-to-Peer Static Peer Transport'
-    profiles: "mr-protocol-smpp, f5-tcp-lan"
-    rules:
-      - /Common/__smpp_basic
+- name: Add virtual server
+  bigip_virtual_server:
+    state: present
+    partition: Common
+    name: serviceMain
+    destination: 10.10.10.20
+    port: "2775"
+    irules:
+      - smpp_generic
+    description: Test Virtual Server
+    profiles:
+      - f5-tcp-progressive
+      - mr-router-smpp
+      - mr-protocol-smpp
     provider: "{{ bigip_provider }}"
   delegate_to: localhost
